--- a/Styles/index.css
+++ b/Styles/index.css
@@ -224,6 +224,42 @@ p {
 	font-size:19px;
 }
 
+.project {
+	display:grid;
+	position: relative;
+	grid-template-columns: 120px auto;
+	grid-template-rows: minmax(100px, auto) minmax(0px, 100px);
+	width:100%;
+	height:auto;
+	min-height: 100px;
+	padding:0;
+	margin:20px auto 0 auto;
+	border-bottom:1px solid #ccc;
+}
+
+.projectIcon {
+	width:100px;
+	display:block;
+	margin: 10px auto 10px auto;
+}
+
+.projectSum {
+	display: block;
+	position: relative;
+}
+
+.projectSum p {
+	text-align: justify;
+	padding:10px 10px 10px 0;
+	margin:0;
+}
+
+.projectSum h2 {
+	color:#424242;
+	margin:10px 0;
+	text-align: left;
+}
+
 /*----------------------------------------------------*/
 
 @keyframes navH {
