--- a/Styles/index.css
+++ b/Styles/index.css
@@ -73,7 +73,7 @@ td {
 	position: relative;
 	background-color: #fff;
 	width: 100%;
-	height: 100%;
+	height: auto;
 	margin: 0;
 	padding: 0;
 }
@@ -85,7 +85,7 @@ td {
 	width: 60%;
 	height: 100%;
 	margin: 0 auto 0 auto;
-	padding: 0;
+	padding: 0 0 50px 0;
 	box-shadow: 0 0 10px 1px gray;
 }
 
@@ -228,7 +228,7 @@ p {
 	display:grid;
 	position: relative;
 	grid-template-columns: 120px auto;
-	grid-template-rows: minmax(100px, auto) minmax(0px, 120px);
+	grid-template-rows: minmax(100px, auto) minmax(0px, 145px);
 	width:100%;
 	height:auto;
 	min-height: 100px;
