--- a/Styles/index.css
+++ b/Styles/index.css
@@ -301,3 +301,34 @@ p {
 .projectSum a:hover {
 	color:#F50057;
 }
+
+#aboutMe {
+	display: block;
+	margin: 0 60px;
+	text-align: justify;
+	line-height: 30px;
+	padding-top:50px;
+}
+
+#alink {
+	color:#283593;
+	transition: color 0.3s ease-in-out;
+}
+
+#alink:hover {
+	color:#F50057;
+}
+
+#pl {
+	color:#424242;
+	text-align: left;
+	list-style: circle;
+	line-height: 30px;
+	margin:0 80px;
+}
+
+h3 {
+	color:#424242;
+	text-align: left;
+	margin:20px 60px;
+}
